--- a/src/slides/general-principles/code-orchestration.qmd
+++ b/src/slides/general-principles/code-orchestration.qmd
@@ -764,7 +764,7 @@ sample_sizes = [50, 200]
 # Generate all combinations
 scenarios = [
     SimulationScenario(
-        name=f"{dgp_class.__name__.lower()}_{dgp_descr}_{estimator_class.__name__.lower()}_n{size}",
+        name=f"{dgp_class.__name__.lower()}_{dgp_descr}_{estimator_class.__name__.lower()}_T{size}",
         dgp=dgp_class,
         dgp_params=dgp_params,
         estimator=estimator_class,
